--- a/static/css/style.css
+++ b/static/css/style.css
@@ -40,6 +40,10 @@ figcaption > p {
     font-style: italic;
 }
 
+besogo-container {
+    border: 1px solid #000!important;
+}
+
 p.poem-line {padding: 0; margin: 0;}
 
 p.poem-1 {
